--- a/frontend/src/.babelrc
+++ b/frontend/src/.babelrc
@@ -5,6 +5,7 @@
 		"minify"
 	],
 	"plugins": [
+		"@babel/plugin-proposal-class-properties",
 		"@babel/plugin-proposal-export-default-from",
 		"@babel/plugin-proposal-logical-assignment-operators",
 		["@babel/plugin-proposal-optional-chaining", { "loose": false }],
