--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^2.0.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
-    "swiper": "^5.3.7"
+    "swiper": "^6.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -45,6 +47,7 @@
     "@babel/plugin-syntax-import-meta": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "actions": "^1.3.0",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "babel-preset-minify": "^0.5.1",
