--- a/backend/package.json
+++ b/backend/package.json
@@ -2,22 +2,33 @@
   "name": "server",
   "version": "1.0.0",
   "main": "server.mjs",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-modules server.mjs"
+    "start": "node --experimental-modules server.mjs",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi": "^0.3.1",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cowsay": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "express-session": "^1.17.1",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
+    "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
-    "pug": "^3.0.0"
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.0",
+    "tunnel-ssh": "^4.1.4"
   },
   "devDependencies": {
     "base-64": "^0.1.0",
