--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "ansi": "^0.3.1",
     "bcryptjs": "^2.4.3",
+    "bunyan": "^1.8.14",
+    "bunyan-express-serializer": "^1.0.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -20,12 +22,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-request-id": "^1.4.1",
     "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
     "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
