--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "server.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "server:seeds": "node seeds/"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "start-ts": "ts-node server.ts",
+    "server:seeds": "node seeds/",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -26,11 +30,13 @@
     "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "http-errors": "^1.8.0",
+    "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "npm": "^6.14.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
@@ -38,6 +44,8 @@
     "tunnel-ssh": "^4.1.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.0.27",
     "base-64": "^0.1.0",
     "bootstrap": "^4.5.0",
     "consolidate": "^0.15.1",
@@ -45,7 +53,10 @@
     "eslint-plugin-react": "^7.20.5",
     "handlebars": "^4.7.6",
     "jquery": "^3.5.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   },
   "description": ""
 }
