--- a/frontend/src/.babelrc
+++ b/frontend/src/.babelrc
@@ -2,8 +2,7 @@
 	"presets":[
 		"@babel/preset-env",
 		"@babel/preset-react",
-		"@babel/preset-typescript",
-		"minify"
+		"@babel/preset-typescript"
 	],
 	"plugins": [
 		"@babel/plugin-proposal-export-default-from",
