--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.mjs",
+  "main": "server.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
-    "start-ts": "ts-node server.ts",
+    "start": "nodemon . ",
     "server:seeds": "node seeds/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -44,11 +40,8 @@
     "tunnel-ssh": "^4.1.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "@types/node": "^14.0.27",
     "base-64": "^0.1.0",
     "bootstrap": "^4.5.0",
-    "consolidate": "^0.15.1",
     "eslint": "^7.5.0",
     "eslint-plugin-react": "^7.20.5",
     "handlebars": "^4.7.6",
