--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,9 @@
     "eslint": "^7.5.0",
     "eslint-plugin-react": "^7.20.5",
     "handlebars": "^4.7.6",
+    "helmet": "^4.0.0",
     "jquery": "^3.5.1",
+    "multer": "^1.4.2",
     "path": "^0.12.7",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
