--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "jquery": "^3.5.1",
     "multer": "^1.4.2",
     "path": "^0.12.7",
+    "query-string": "^6.13.1",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
