--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,9 +1,14 @@
 {
   "extends": [
+    "alloy",
+    "alloy/react",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "prettier",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended",
-    "plugin:react/recommended"
+    "prettier/babel",
+    "prettier/react",
+    "prettier/standard",
   ],
   "settings": {
     "react": {
@@ -20,10 +25,22 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "react/prop-types": 0
   },
+  "plugins": [
+    "@typescript-eslint",
+    "babel",
+    "react",
+  ],
   "parserOptions": {
     "sourceType": "module",
     "parser": "babel-eslint",
-    "ecmaVersion": 2018
+    "ecmaVersion": 2018,
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "es6": true,
+    "node": true
   },
   "overrides": [
     {
