--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,6 +77,7 @@
     "@typescript-eslint/parser": "^3.8.0",
     "actions": "^1.3.0",
     "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.2.2",
     "babel-loader": "^8.1.0",
     "babel-preset-minify": "^0.5.1",
@@ -85,8 +86,10 @@
     "css-loader": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.6.0",
+    "eslint": "^7.8.1",
+    "eslint-config-alloy": "^3.8.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
